--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "a2plc",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "A command line tool for converting Android XML string files to Property files.",
   "main": "index.js",
-  "repository": { "type": "git", "url": "https://github.com/eddnav/a2plc" },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/eddnav/a2plc"
+  },
   "author": "Eduardo Naveda",
   "license": "ISC",
   "bin": {
