Improve getting version string from package.json

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "a2plc": "./index.js"
   },
   "dependencies": {
-    "commander": "^2.18.0",
+    "commander": "^2.19.0",
+    "pkginfo": "^0.4.1",
     "xml2js": "^0.4.19"
   }
 }
